Bug 346373: Resync children when parent spellcheck attribute changes. r=bzbarsky sr=sicking