content/html/content/src/nsGenericHTMLElement.h
@@ -766,6 +766,12 @@ protected:
    * Returns true if this is the current document's body element
    */
   PRBool IsCurrentBodyElement();
+
+  /**
+   * Ensures all editors associated with a subtree are synced, for purposes of
+   * spellchecking.
+   */
+  static void SyncEditorsOnSubtree(nsIContent* content);
 };
 
 
